--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <header>
         <meta charset="UTF-8" />
 
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./assets/css/style.css">
 
         <title>Cat Lin Portfolio</title>
 
@@ -47,7 +47,7 @@
 
         <!-- Contact and External Links -->
         <section>
-            
+
         </section>
 
         <!-- Footer -->
