updated html, css, and added hero image

--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
     </header>
 
     <body>
-
         <!-- Name and Navigation -->
         <header>
             <h1>Cat Lin Morgan</h1>
             <nav>
                 <ul>
-                    <a href="#about-me">About Me</a>
-                    <a href="#my-work">My Work</a>
-                    <!-- <a href=""></a> -->
-                    <a href="#how-to-reach-me">How To Reach Me</a>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#my-work">My Work</a>
+                    </li>
+                    <li>
+                        <a href="#how-to-reach-me">How To Reach Me</a>
+                    </li>
                 </ul>
             </nav>
         </header>
 
         <!-- Hero image and tiny blurb -->
-        <section class="bigimage">
+        <section class="hero">
             <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, totam autem? Amet consectetur quos placeat enim. Placeat corporis repellendus amet voluptas commodi atque explicabo possimus, nam dolores, nemo tempora cupiditate?</h2>
         </section>
 
@@ -52,7 +56,13 @@
 
         <!-- Footer -->
         <footer>
-
+            <h2>Contact Me</h2>
+            <ul>
+                <li>Phone # :<a href="/"> (323) 713 - 6089</a></li>
+                <li>Email :<a href="/"> plummorgan@gmail.com</a></li>
+                <li><a href="https://github.com/cat-lin-morgan" target="_blank">GitHub</a></li>
+                <li><a href="https://www.instagram.com/cattongues.png" target="_blank">Instagram</a></li>
+            </ul>
         </footer>
 
     </body>
