--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     
-    <header>
+    <head>
         <meta charset="UTF-8" />
-
+        <link href="https://fonts.googleapis.com/css2?family=Sail&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css">
+        
 
         <title>Cat Lin Portfolio</title>
 
-    </header>
+    </head>
 
     <body>
         <!-- Name and Navigation -->
@@ -31,7 +32,7 @@
 
         <!-- Hero image and tiny blurb -->
         <section class="hero">
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, totam autem? Amet consectetur quos placeat enim. Placeat corporis repellendus amet voluptas commodi atque explicabo possimus, nam dolores, nemo tempora cupiditate?</h2>
+            <h2>Hi, it me.</h2>
         </section>
 
         <!-- About Me -->
