--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
                     <p>
                         Digital artist currently residing in Los Angeles, CA. Born and raised city center, the fashion and artist scenes of the Los Angeles underground have shaped my unique artist tastes and palettes.
                         <br /><br />
-                        Cat has an educational background, in painting and animation. 
+                        I have an background in the fine arts. <br />
+                        For fun, I enjoy photography, fashion, and digital collage. 
+                        <br /><br />
+                        I'm good at making things look nice. 
+                        <br />
+                        <span>♡ ♡ ♡ ♡ ♡</span>
                     </p>
                 </div>
            </div>
@@ -67,28 +72,28 @@
                     <div class="work-container">
 
                         <!-- website one run buddy -->
-                        <div>
+                        <div class="work-thumb">
                             <a href="https://cat-lin-morgan.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/runbuddywebsite.png" alt="Screenshot of active Run Buddy website." />
                             </a>
                         </div>
 
                         <!-- website 2 horiseon -->
-                        <div>
+                        <div class="work-thumb">
                             <a href="https://cat-lin-morgan.github.io/horiseon/" target="_blank">
                                 <img src="./assets/images/horiseonwebpage.png" alt="Screenshot of active Horiseon website." />
                             </a>
                         </div>
 
                         <!-- website 3 my website -->
-                        <div>
+                        <div class="work-thumb">
                             <a href="https://cat-lin-morgan.github.io/" target="_blank">
                                 <img src="./assets/images/catlinwebpage.png" alt="Screenshot of active Cat Lin Portfolio website." />
                             </a>
                         </div>
 
                         <!-- website 4 -->
-                        <div>
+                        <div class="work-thumb">
                             <a href="">
                                 <img src="" />
                             </a>
