adding media qeueries

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                         </div>
 
                         <!-- website 4 -->
-                        <div class="work-thumb">
+                        <!-- <div class="work-thumb">
                             <a href="">
                                 <img src="" />
                             </a>
-                        </div>
+                        </div> -->
 
                     </div>
 
