finished media query

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="about-img-p"> 
-                    <img src="assets/images/raincat.png" alt="Cat amongst sits among rainows and smiley faces.">
+                    <img src="assets/images/raincat.png" alt="Cat amongst sits among rainbows and smiley faces.">
                     <p>
                         Digital artist currently residing in Los Angeles, CA. Born and raised city center, the fashion and artist scenes of the Los Angeles underground have shaped my unique artist tastes and palettes.
                         <br /><br />
@@ -110,8 +110,8 @@
         <footer id="how-to-reach-me">
             <h2 class="h2-fonts">Contact Me</h2>
             <ul>
-                <li>Phone # :<a href="/"> (323) 713 - 6089</a></li>
-                <li>Email :<a href="/"> plummorgan@gmail.com</a></li>
+                <li>Phone # :<a href="#"> (323) 713 - 6089</a></li>
+                <li>Email :<a href="#"> plummorgan@gmail.com</a></li>
                 <li><a href="https://github.com/cat-lin-morgan" target="_blank">GitHub</a></li>
                 <li><a href="https://www.instagram.com/cattongues.png" target="_blank">Instagram</a></li>
             </ul>
