grid updates for phone and small screens

--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
                     <!-- work container -->
                     <div class="work-container">
 
-                        <!-- website one run buddy -->
-                        <div class="work-thumb">
+                        <!-- website 1 my website -->
+                        <div class="work-thumb container-1">
+                            <a href="https://cat-lin-morgan.github.io/" target="_blank">
+                                <img src="./assets/images/catlinwebpage.png" alt="Screenshot of active Cat Lin Portfolio website." />
+                            </a>
+                        </div>
+
+                        <!-- website 2 run buddy -->
+                        <div class="work-thumb container-2">
                             <a href="https://cat-lin-morgan.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/runbuddywebsite.png" alt="Screenshot of active Run Buddy website." />
                             </a>
                         </div>
 
-                        <!-- website 2 horiseon -->
-                        <div class="work-thumb">
+                        <!-- website 3 horiseon -->
+                        <div class="work-thumb container-3">
                             <a href="https://cat-lin-morgan.github.io/horiseon/" target="_blank">
                                 <img src="./assets/images/horiseonwebpage.png" alt="Screenshot of active Horiseon website." />
-                            </a>
-                        </div>
-
-                        <!-- website 3 my website -->
-                        <div class="work-thumb">
-                            <a href="https://cat-lin-morgan.github.io/" target="_blank">
-                                <img src="./assets/images/catlinwebpage.png" alt="Screenshot of active Cat Lin Portfolio website." />
                             </a>
                         </div>
 
