media queries updated

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         <footer id="how-to-reach-me">
             <h2 class="h2-fonts">Contact Me</h2>
             <ul>
-                <li>Phone # :<a href="#"> (323) 713 - 6089</a></li>
-                <li>Email :<a href="#"> plummorgan@gmail.com</a></li>
+                <li>Phone # :<a href="tel:323-713-6089"> (323) 713 - 6089</a></li>
+                <li>Email :<a href="mailto:plummorgan@gmail.com"> plummorgan@gmail.com</a></li>
                 <li><a href="https://github.com/cat-lin-morgan" target="_blank">GitHub</a></li>
                 <li><a href="https://www.instagram.com/cattongues.png" target="_blank">Instagram</a></li>
             </ul>
