added hover titles to grid

--- a/index.html
+++ b/index.html
@@ -73,25 +73,37 @@
                     <div class="work-container">
 
                         <!-- website 1 my website -->
-                        <div class="work-thumb container-1">
+                        <figure class="work-thumb container-1">
                             <a href="https://cat-lin-morgan.github.io/" target="_blank">
                                 <img src="./assets/images/catlinwebpage.png" alt="Screenshot of active Cat Lin Portfolio website." />
+                                <figcaption>
+                                    Cat Lin Portfolio<br />
+                                    <small>HTML / CSS</small>
+                                </figcaption>
                             </a>
-                        </div>
+                        </figure>
 
                         <!-- website 2 run buddy -->
-                        <div class="work-thumb container-2">
+                        <figure class="work-thumb container-2">
                             <a href="https://cat-lin-morgan.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/runbuddywebsite.png" alt="Screenshot of active Run Buddy website." />
+                                <figcaption>
+                                    Run Buddy<br />
+                                    <small>HTML / CSS</small>
+                                </figcaption>
                             </a>
-                        </div>
+                        </figure>
 
                         <!-- website 3 horiseon -->
-                        <div class="work-thumb container-3">
+                        <figure class="work-thumb container-3">
                             <a href="https://cat-lin-morgan.github.io/horiseon/" target="_blank">
                                 <img src="./assets/images/horiseonwebpage.png" alt="Screenshot of active Horiseon website." />
+                                <figcaption>
+                                    Horiseon<br />
+                                    <small>HTML / CSS</small>
+                                </figcaption>
                             </a>
-                        </div>
+                        </figure>
 
                         <!-- website 4 -->
                         <!-- <div class="work-thumb">
