spellcheck and easter eggs

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <p>
                         Digital artist currently residing in Los Angeles, CA. Born and raised city center, the fashion and artist scenes of the Los Angeles underground have shaped my unique artist tastes and palettes.
                         <br /><br />
-                        I have an background in the fine arts. <br />
-                        For fun, I enjoy photography, fashion, and digital collage. 
+                        I have a background in the fine arts. <br />
+                        For fun, I enjoy photography, fashion, music, and digital collage. 
                         <br /><br />
                         I'm good at making things look nice. 
                         <br />
