changed and updated projects

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 
                         <!-- website 3 horiseon -->
                         <figure class="work-thumb container-3">
-                            <a href="https://cat-lin-morgan.github.io/horiseon/" target="_blank">
-                                <img src="./assets/images/horiseonwebpage.png" alt="Screenshot of active Horiseon website." />
+                            <a href="https://cat-lin-morgan.github.io/code-quiz/" target="_blank">
+                                <img src="./assets/images/codingquizscreenshot.png" alt="Screenshot of active Coding Quiz website." />
                                 <figcaption>
-                                    Horiseon<br />
-                                    <small>HTML / CSS</small>
+                                    Coding Quiz<br />
+                                    <small>JAVASCRIPT / CSS </small>
                                 </figcaption>
                             </a>
                         </figure>
