--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </head>
 
     <body>
+        <div id="progressBar"></div>
+        <div id="progressBarContainer"></div>
         <!-- Name and Navigation -->
         <header>
             <h1>Cat Lin Morgan</h1>
@@ -129,10 +131,6 @@
                 <li><a href="https://www.instagram.com/cattongues.png" target="_blank">Instagram</a></li>
             </ul>
         </footer>
-
+    <script src="assets/js/script.js"></script>
     </body>
-
-
-
-
 </html>
