added a more descriptive about me

--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
                     <p>
                         Digital artist currently residing in Los Angeles, CA. Born and raised city center, the fashion and artist scenes of the Los Angeles underground have shaped my unique artist tastes and palettes.
                         <br /><br />
-                        I have a background in the fine arts. <br />
-                        For fun, I enjoy photography, fashion, music, and digital collage. 
+                        For fun, I enjoy photography, fashion, music, and digital collage with Adobe Photoshop. 
                         <br /><br />
+                        I have a background in the fine arts. <br />
+                        I am proficient in HTML, CSS, Javascript.
+                        <br/><br/>
                         I'm good at making things look nice. 
                         <br />
                         <span>♡ ♡ ♡ ♡ ♡</span>
