updated grid icons and figcaption text

--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
 
                         <!-- website 1 my website -->
                         <figure class="work-thumb container-1">
-                            <a href="https://cat-lin-morgan.github.io/" target="_blank">
-                                <img src="./assets/images/catlinwebpage.png" alt="Screenshot of active Cat Lin Portfolio website." />
+                            <a href="" target="_blank">
+                                <img src="assets/images/spacedoutwebsite.gif" alt="Screenshot ofthe active Spaced Out Webpage." />
                                 <figcaption>
-                                    Cat Lin Portfolio<br />
-                                    <small>HTML / CSS</small>
+                                    Spaced Out<br />
+                                    <small>JAVASCRIPT / CSS</small>
                                 </figcaption>
                             </a>
                         </figure>
 
                         <!-- website 2 run buddy -->
                         <figure class="work-thumb container-2">
-                            <a href="https://cat-lin-morgan.github.io/run-buddy/" target="_blank">
-                                <img src="./assets/images/runbuddywebsite.png" alt="Screenshot of active Run Buddy website." />
+                            <a href="https://cat-lin-morgan.github.io/" target="_blank">
+                                <img src="assets\images\catlinwebpage.png" alt="Screenshot of active Cat Lin Portfolio website." />
                                 <figcaption>
-                                    Run Buddy<br />
+                                    Cat Lin Portfolio<br />
                                     <small>HTML / CSS</small>
                                 </figcaption>
                             </a>
@@ -102,10 +102,10 @@
                         <!-- website 3 horiseon -->
                         <figure class="work-thumb container-3">
                             <a href="https://cat-lin-morgan.github.io/code-quiz/" target="_blank">
-                                <img src="./assets/images/codingquizscreenshot.png" alt="Screenshot of active Coding Quiz website." />
+                                <img src="assets/images/codingquizscreenshot.png" alt="Screenshot of active Coding Quiz website." />
                                 <figcaption>
                                     Coding Quiz<br />
-                                    <small>JAVASCRIPT / CSS </small>
+                                    <small>JAVASCRIPT / CSS</small>
                                 </figcaption>
                             </a>
                         </figure>
