--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <img src="assets/images/spacedoutwebsite.gif" alt="Screenshot ofthe active Spaced Out Webpage." />
                                 <figcaption>
                                     Spaced Out<br />
-                                    <small>JAVASCRIPT / CSS</small>
+                                    <small>JAVASCRIPT / CSS / HTML</small>
                                 </figcaption>
                             </a>
                         </figure>
@@ -94,9 +94,9 @@
                                 <img src="assets\images\catlinwebpage.png" alt="Screenshot of active Cat Lin Portfolio website." />
                                 <figcaption>
                                     Cat Lin Portfolio<br />
-                                    <small>HTML / CSS</small>
+                                    <small>HTML / CSS / JAVASCRIPT</small>
                                 </figcaption>
-                            </a>
+                            </a>Z
                         </figure>
 
                         <!-- website 3 horiseon -->
