added to about me

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     <p>
                         Digital artist currently residing in Los Angeles, CA. Born and raised city center, the fashion and artist scenes of the Los Angeles underground have shaped my unique artist tastes and palettes.
                         <br /><br />
-                        For fun, I enjoy photography, fashion, music, and digital collage with Adobe Photoshop. 
+                        For fun, I enjoy fashion, anime, video games, and digital art.
                         <br /><br />
-                        I have a background in the fine arts. <br />
-                        I am proficient in HTML, CSS, Javascript.
+                        I have a background in the fine arts, graphic design, and animation. <br />
+                        I am proficient in HTML, CSS, Javascript languages.
                         <br/><br/>
                         I'm good at making things look nice. 
                         <br />
@@ -96,7 +96,7 @@
                                     Cat Lin Portfolio<br />
                                     <small>HTML / CSS / JAVASCRIPT</small>
                                 </figcaption>
-                            </a>Z
+                            </a>
                         </figure>
 
                         <!-- website 3 horiseon -->
