updated hover effects and hero for media query

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                         <!-- website 1 my website -->
                         <figure class="work-thumb container-1">
-                            <a href="" target="_blank">
+                            <a href="https://rawagschal.github.io/spaced-out/" target="_blank">
                                 <img src="assets/images/spacedoutwebsite.gif" alt="Screenshot ofthe active Spaced Out Webpage." />
                                 <figcaption>
                                     Spaced Out<br />
