added resume link and styles to link

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <ul>
                 <li>Phone # :<a href="tel:323-713-6089"> (323) 713 - 6089</a></li>
                 <li>Email :<a href="mailto:plummorgan@gmail.com"> plummorgan@gmail.com</a></li>
+                <li><a href="https://resume.io/r/6EfC4cBrH" target="_blank"><span>Resume</span></a></li>
                 <li><a href="https://github.com/cat-lin-morgan" target="_blank">GitHub</a></li>
                 <li><a href="https://www.instagram.com/cattongues.png" target="_blank">Instagram</a></li>
             </ul>
