restyled about me

--- a/index.html
+++ b/index.html
@@ -49,16 +49,14 @@
                 <div class="about-img-p"> 
                     <img src="assets/images/raincat.png" alt="Cat amongst sits among rainbows and smiley faces.">
                     <p>
-                        Digital artist currently residing in Los Angeles, CA. Born and raised city center, the fashion and artist scenes of the Los Angeles underground have shaped my unique artist tastes and palettes.
+                        <span id="about-blurb">I'm good at making things look nice. </span><br /><br/>
+                        <span class="about-hello">Hello!</span>
+                        I am a colorful coder, designer, and artist living in Los Angeles, CA. Born and raised city center, the various scenes of the Los Angeles underground have shaped my unique tastes and palettes. <br/>
                         <br /><br />
-                        For fun, I enjoy fashion, anime, video games, and digital art.
+                        <span>════════ ⋆★⌘★⋆ ════════</span><br />
                         <br /><br />
-                        I have a background in the fine arts, graphic design, and animation. <br />
-                        I am proficient in HTML, CSS, Javascript languages.
-                        <br/><br/>
-                        I'm good at making things look nice. 
-                        <br />
-                        <span>♡ ♡ ♡ ♡ ♡</span>
+                        
+                        
                     </p>
                 </div>
            </div>
