added new styling to about me

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                         <br /><br />
                         <span>════════ ⋆★⌘★⋆ ════════</span><br />
                         <br /><br />
-                        
+                        <small>The about me section is currently a work in progress.</small>
+                        <br /><br /><br />
+
+                        <!-- <span id="about-blurb">Languages I write in:</span> -->
                         
                     </p>
                 </div>
