added get hitched to portfolio and adjusted the grid

--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
                         <span class="about-hello">Hello!</span>
                         I am a colorful coder, designer, and artist living in Los Angeles, CA. Born and raised city center, the various scenes of the Los Angeles underground have shaped my unique tastes and palettes. <br/>
                         <br /><br />
-                        <span>════════ ⋆★⌘★⋆ ════════</span><br />
                         <br /><br />
-                        <small>The about me section is currently a work in progress.</small>
-                        <br /><br /><br />
+                        <small>The about me section is currently a work in progress.</small><br />
+                        <br />
+                        <span>════════ ⋆★⌘★⋆ ════════</span><br />
+                        <br />
+
 
                         <!-- <span id="about-blurb">Languages I write in:</span> -->
                         
@@ -71,15 +73,25 @@
                 <div>
                     <h2 class="h2-fonts mediafont">My Work</h2>
                 </div>
-                
                 <!-- grid wrapper -->
                 <div class="gridwrapper">
 
                     <!-- work container -->
                     <div class="work-container">
 
-                        <!-- website 1 my website -->
+                        <!-- website 1 -->
                         <figure class="work-thumb container-1">
+                            <a href="https://sheltered-eyrie-92140.herokuapp.com/" target="_blank">
+                                <img src="assets/images/gethitchedgif.gif" alt="Screenshot of the active Get Hitched Website." />
+                                <figcaption>
+                                    Get Hitched!<br />
+                                    <small>NODE.JS / HANDLEBARS / EXPRESS</small>
+                                </figcaption>
+                            </a>
+                        </figure>
+
+                        <!-- website 2 -->
+                        <figure class="work-thumb container-2">
                             <a href="https://rawagschal.github.io/spaced-out/" target="_blank">
                                 <img src="assets/images/spacedoutwebsite.gif" alt="Screenshot ofthe active Spaced Out Webpage." />
                                 <figcaption>
@@ -89,8 +101,8 @@
                             </a>
                         </figure>
 
-                        <!-- website 2 run buddy -->
-                        <figure class="work-thumb container-2">
+                        <!-- website 3 -->
+                        <figure class="work-thumb container-3">
                             <a href="https://cat-lin-morgan.github.io/" target="_blank">
                                 <img src="assets\images\catlinwebpage.png" alt="Screenshot of active Cat Lin Portfolio website." />
                                 <figcaption>
@@ -100,8 +112,8 @@
                             </a>
                         </figure>
 
-                        <!-- website 3 horiseon -->
-                        <figure class="work-thumb container-3">
+                        <!-- website 4 -->
+                        <figure class="work-thumb container-4">
                             <a href="https://cat-lin-morgan.github.io/code-quiz/" target="_blank">
                                 <img src="assets/images/codingquizscreenshot.png" alt="Screenshot of active Coding Quiz website." />
                                 <figcaption>
@@ -111,12 +123,17 @@
                             </a>
                         </figure>
 
-                        <!-- website 4 -->
-                        <!-- <div class="work-thumb">
-                            <a href="">
-                                <img src="" />
+                        <!-- website 5 -->
+                        <figure class="work-thumb container-5">
+                            <a href="https://github.com/cat-lin-morgan/employee-tracker" target="_blank">
+                                <img src="assets/images/employeetrackerapp.png" alt="Screenshot of command line application." />
+                                <figcaption>
+                                    Employee Tracker<br />
+                                    <small>JAVASCRIPT / NODE.JS / SQL</small>
+                                </figcaption>
                             </a>
-                        </div> -->
+                        </figure>
+
 
                     </div>
 
