--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./assets/css/style.css">
         
 
-        <title>Cat Lin Portfolio</title>
+        <title>Cat Lin's Portfolio</title>
 
     </head>
 
